# oxide-template

./: .gitignore  Cargo.toml  test.sh
assets/shaders/src/: lit.frag  perspective.vert
src/: main.rs
